<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.fiap.notas.CadastraLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_cadastra_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNome"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/edtSobrenome"
            android:hint="@string/sobrenome"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgSexo"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFeminino"
                android:text="@string/feminino"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMasculino"
                android:text="@string/masculino"/>
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/edtDataNascimento"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/edtSenha"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/btnGravarDados"
            android:text="@string/gravar_dados"
            android:textStyle="bold"
            android:onClick="gravarChaves"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExcluirChaves"
                android:text="@string/excluir_dados"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="excluirChaves"/>

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCarregarChaves"
                android:text="@string/carregar_dados"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="carregarChaves"/>

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnVerificarChaves"
                android:text="@string/verificar_dados"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="verificarDados" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGravarArquivo"
                android:text="@string/gravar"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="gravarArquivo"/>

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLerArquivo"
                android:text="@string/ler_arquivo"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="lerArquivo"/>

            <Button
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExcluirArquivo"
                android:text="@string/excluir_arquivo"
                android:textStyle="bold"
                android:layout_weight="1"
                android:onClick="excluirArquivo"/>
        </LinearLayout>

        <Button
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/btnRetornar"
            android:text="@string/fechar_e_retornar"
            android:textStyle="bold"
            android:onClick="voltar"/>


    </LinearLayout>
</ScrollView>
